--- a/StarDancers/src/assets/base.css
+++ b/StarDancers/src/assets/base.css
@@ -32,7 +32,7 @@
 
 /* semantic color variables for this project */
 :root {
-  --color-background: var(--vt-c-white);
+  --color-background: #f5f5f5;
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
 
@@ -92,4 +92,34 @@ body {
 .yellow {
   background: var(--main-yellow);
   color: #fff;
+}
+
+.shadow-davdsm {
+  box-shadow: 89px 103px 67px rgba(0, 0, 0, 0.03),
+    32.5px 37.6px 21.4px rgba(0, 0, 0, 0.02),
+    15.8px 18.3px 9px rgba(0, 0, 0, 0.017),
+    7.7px 8.9px 3.6px rgba(0, 0, 0, 0.013),
+    3.1px 3.5px 1.1px rgba(0, 0, 0, 0.009);
+}
+
+.entry {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 1s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+  animation-name: entry;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+}
+
+@keyframes entry {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
 }
