--- a/StarDancers/src/assets/base.css
+++ b/StarDancers/src/assets/base.css
@@ -109,7 +109,10 @@ body {
   animation-name: entry;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
-  animation-delay: 1s;
+  animation-timing-function: cubic-bezier(0.785, 0.135, 0.15, 0.86);
+}
+.delay {
+  animation-delay: 0.1s;
 }
 
 @keyframes entry {
