listing and create modal to edit

--- a/StarDancers/src/assets/base.css
+++ b/StarDancers/src/assets/base.css
@@ -114,6 +114,9 @@ body {
 .delay {
   animation-delay: 0.1s;
 }
+table tr:nth-child(even) {
+  background-color: rgb(249 250 251);
+}
 
 @keyframes entry {
   0% {
